[package]
name = "aleo-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "mysql" ]

[dependencies]
snarkvm-synthesizer = "0.10.3"
snarkvm-console-network = "0.10.3"
snarkvm-console-types-address = "0.10.3"
snarkos-node-consensus  = {git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3"}

tokio = {version = "1.25.0", features = ["full"]}
reqwest = "0.11.13"
log = "0.4.17"
env_logger = "0.10.0"
serde = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9"
mysql = {version = "23.0.1", optional = true }
mysql_common = "0.29.2"
backoff = {version = "0.4.0", features = [ "tokio" ]}
anyhow = "1"
bincode = "1.0"
colored = "2"
futures = "0.3"
parking_lot = "0.12"
lazy_static = "1.4.0"
memmap2 = "0.5.6"
http = "0.2"
warp = "0.3.3"
clap = {version = "3.2", features = ["derive"]}
num_cpus = "1"